k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-with-flask-deployment
  labels:
    app: task-with-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-with-flask
  template:
    metadata:
      labels:
        app: task-with-flask
    spec:
      containers:
        - name: task-with-flask
          image: gmarinho21/gabriel-hdb:de2c9ca
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 500Mi
