k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-with-flask-service
  namespace: tasg
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: task-with-flask
